[package]
name = "flash-client"
version = "0.1.0"
authors = ["Peter Lande"]
description = "A TUI application for studying with flash cards."
readme = "../README.md"
repository = "https://github.com/Peter-Lande/flash-client"
license = "MIT"
keywords = ["tui", "application"]

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tui = "0.19.0"
rust-ini = "0.18"
dirs = "4.0"
